perbaikan revisi submisi

--- a/preprocessing/Eksperimen_Abdullah_Rayhan_Eden.ipynb
+++ b/preprocessing/Eksperimen_Abdullah_Rayhan_Eden.ipynb
@@ -4014,6 +4014,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Menyimpan dataframe akhir"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -4021,12 +4028,15 @@
       },
       "outputs": [],
       "source": [
-        "'''\n",
-        "awalnya kode ini untuk simpan sebagai csv tapi fungsinya sudah digantikan oleh preprocessing automatis\n",
-        "'''\n",
-        "# simpan dataframe\n",
-        "#df.to_csv('pokemon_dataset_preprocessing.csv', index=False)"
+        "\n",
+        "#simpan dataframe\n",
+        "df.to_csv('pokemon_dataset_preprocessing.csv', index=False)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
